# lyapas-lcc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  clang-format.sh  compile_and_run.sh  grammar.y  im0_im1.y  im1_im1_ast.cpp  im1_im2.cpp  im_program_printer.py  lcc.sh  lyapas_im0.l  lyapas_to_json.py  print_json.c  print_json.h  requirements.txt  synt_im0_im1.y  syntree  vis_syn_tree.py
aux/: im0.schema.json  im1.schema.json  im2.schema.json  lyapaslex.py  lyapasyacc.py
doc/: cyaz.md  definitions.md  dyaz.md  oyaz.md  syaz.md  unicode.md
examples/: call.im0  call.im1  call.im2  call.im3  call.json  call.lyapas  complexes.im0  complexes.im1  complexes.im2  complexes.im3  complexes.im5  complexes.json  complexes.lyapas  ex1.im0  ex1.im1  ex1.im2  ex1.im3  ex1.json  ex1.lyapas  ex2.im0  ex2.im1  ex2.im2  ex2.im3  ex2.json  ex2.lyapas  ex3.im0  ex3.im1  ex3.im2  ex3.im3  ex3.json  ex3.lyapas  ex4.im0  ex4.im1  ex4.im2  ex4.im3  ex4.json  ex4.lyapas  example_with_all_operations.im0  example_with_all_operations.im1  example_with_all_operations.im2  (+10 more)
examples/1/: ex1.im0  ex1.im2
examples/2/: ex2.im0  ex2.im2  ex2.lyapas
examples/3/: ex3.im0  ex3.im2
examples/4/: ex4.lyapas
examples/complexoyaz/: clear_complex.im0  (+30 more)
sources/im0_im1/: CMakeLists.txt  im0_im1.y  required.txt
sources/im1ToIm2/: CMakeLists.txt  ex3.im1  ex3.im1_short  ex3.im1o  example_with_all_operations.im1  main.cpp
sources/im1ToIm2/source/CompositeCmd/: CompositeCmd.cpp  CompositeCmd.h  ICmd.cpp  ICmd.h  LeafCmd.cpp  LeafCmd.h
sources/im1ToIm2/source/CompositeCmd/Compisities/: ArgsCmd.cpp  ArgsCmd.h  ComplexCmd.cpp  ComplexCmd.h  OperationCmd.cpp  OperationCmd.h  ParagraphCmd.cpp  ParagraphCmd.h  PrefaceCmd.cpp  ProcedureCmd.cpp  ProcedureCmd.h  ProcessCmd.cpp  ProcessCmd.h  ProgramCmd.cpp  ProgramCmd.h  StabCompositeCmd.h
sources/im1ToIm2/source/CompositeCmd/Composites/: ArgsCmd.cpp  ArgsCmd.h  ComplexCmd.cpp  ComplexCmd.h  OperationCmd.cpp  ParagraphCmd.cpp  ParagraphCmd.h  PrefaceCmd.cpp  PrefaceCmd.h  ProcedureCmd.cpp  ProgramCmd.cpp  ProgramCmd.h  StabCompositeCmd.cpp
sources/im1ToIm2/source/CompositeCmd/Leafs/: AsmCmd.cpp  ConstantCmd.cpp  ConstantCmd.h  StabLeafCmd.cpp  StabLeafCmd.h  StringCmd.cpp  VariableCmd.cpp  VariableCmd.h
sources/im1ToIm2/source/CompositiesCmd/: CompositeCmd.cpp  CompositeCmd.h
sources/im1ToIm2/source/ParsersTree/: ParserTree.cpp  ParserTree.h
sources/im1ToIm2/source/TreeParser/: CmdFactory.cpp  IParser.cpp  IParser.h  TreeParser.cpp  TreeParser.h
sources/im1_im2/: CMakeLists.txt  main.cpp
sources/im1_im2/CompositeCmd/: CompositeCmd.cpp  ICmd.cpp  ICmd.h
sources/im1_im2/CompositeCmd/Leafs/: StringCmd.h
sources/im1_im2/source/CompositeCmd/: LeafCmd.h
sources/im1_im2/source/CompositeCmd/Composites/: ComplexCmd.cpp  OperationCmd.h  ProgramCmd.cpp
sources/im1_im2/source/CompositeCmd/Leafs/: AsmCmd.h
sources/im1_im2/source/TreeParser/: IParser.h
sources/im1_im2/src/: CMakeLists.txt  main.cpp
sources/im1_im2/src/CompositeCmd/: CompositeCmd.h  ICmd.cpp  ICmd.h  LeafCmd.h
sources/im1_im2/src/CompositeCmd/Composites/: ArgsCmd.cpp  ArgsCmd.h  ComplexCmd.cpp  ComplexCmd.h  CompositeCmd.cpp  CompositeCmd.h  OperationCmd.cpp  OperationCmd.h  ParagraphCmd.cpp  ParagraphCmd.h  PrefaceCmd.cpp  PrefaceCmd.h  ProcedureCmd.cpp  ProcedureCmd.h  ProgramCmd.cpp  ProgramCmd.h
sources/im1_im2/src/CompositeCmd/Leafs/: AsmCmd.cpp  AsmCmd.h  ConstantCmd.cpp  ConstantCmd.h  LeafCmd.cpp  LeafCmd.h  StringCmd.cpp  StringCmd.h  VariableCmd.cpp  VariableCmd.h
sources/im1_im2/src/TreeParser/: CmdFactory.cpp  CmdFactory.h  IParser.h  TreeParser.cpp  TreeParser.h
sources/im1_im2/tests/: CMakeLists.txt  ComplexCmd.cpp  ProccedureCmd.cpp
sources/im4_im5/: CMakeLists.txt  complexoyaz.cpp  complexoyaz.h  counters.h  free_label_replacer.cpp  free_label_replacer.h  free_var_replacer.cpp  free_var_replacer.h  functional_replacers.cpp  functional_replacers.h  icounter.h  labels_counter.cpp  labels_counter.h  main.cpp  replacers.cpp  replacers.h  rules.txt  variables_counter.cpp  variables_counter.h
sources/im4_im5/tests/: CMakeLists.txt  complexoyaz.cpp  labels_counter.cpp  variables_counter.cpp
sources/im7_im8/: CMakeLists.txt  assembler.cpp  assembler.h  bss.h  builtin_functions.cpp  builtin_functions.h  label_fix.h  main.cpp  make_cmd.cpp  make_cmd.h  program.cpp  program.h  program_translator.cpp  program_translator.h  registers.h
sources/libs/jsoncpp/: CMakeLists.txt
sources/libs/print_json/: CMakeLists.txt
sources/libs/shared_utils/: CMakeLists.txt
sources/libs/shared_utils/include/shared_utils/: assertion.h  json_helper.h  string_helper.h  translation_helper.h
sources/libs/shared_utils/include/tests_utils/: json_parse.h
sources/libs/shared_utils/src/: array_index.cpp  is_int.cpp  json_helper.cpp
sources/libs/translation_module/: CMakeLists.txt
sources/libs/translation_module/include/translation_module/: aliases.h  arg_builders.h  cmd_builder.h  cmd_info.h  cmd_translator.h  cmd_translator_storage.h  fillers.h  replacers.h  translation_module.h
sources/libs/translation_module/src/: CMakeLists.txt  cmd_info.cpp  translation_module.cpp
sources/libs/translation_module/src/include/translation_module/: aliases.h  arg_builders.h  cmd_translator.h  cmd_translator_storage.h  replacers.h  translation_module.h
sources/libs/translation_module/src/src/: cmd_info.cpp  translation_module.cpp
sources/libs/translation_module/src/translation_module/: aliases.h  args_range.cpp  args_range.h  cmd_builder.h  cmd_info.cpp  cmd_info.h  cmd_translator.h  fillers.h  free_label_replacer.cpp  free_label_replacer.h  free_var_replacer.cpp  free_var_replacer.h  icounter.h  labels_counter.cpp  labels_counter.h  replacers.h  translation_module.cpp  translation_module.h  variables_counter.cpp  variables_counter.h
sources/libs/translation_module/tests/: CMakeLists.txt  args_range.cpp  example.cpp  labels_counter.cpp  translator_fixture.cpp  translator_fixture.h  variables_counter.cpp
sources/lyapas_im0/: CMakeLists.txt  lyapas_im0.l
vim/: vimrc
(+41 files in other folders)
